Squash warnings